--- a/homepage/homepage.css
+++ b/homepage/homepage.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: "Open Sans", serif;
 }   
 
 body {
@@ -56,8 +59,9 @@ header nav ul {
     list-style-type: none;
     display: flex;
     gap: 70px;
-    margin-left: 80px;
+    margin-left: 50px;
     margin-top: 10px;
+    cursor: pointer;
 }
 
 header nav ul li {
@@ -123,6 +127,57 @@ header .signup-btn {
     background-color: #444343;
     color: #ffffff;
 }
+
+/* POP UP SURUH LOGIN */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(54, 54, 54, 0.7); /* abu-abu dengan transparansi */
+    display: none; /* awalnya tersembunyi */
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+}
+
+  /* CSS untuk kotak popup */
+  .popup {
+    background-color: transparent;
+    color: white;
+    border-radius: 20px;
+    width: 1000px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transform: translateY(100%); /* Mulai di luar layar */
+    transition: transform 0.5s ease; /* Durasi transisi */
+  }
+
+  .popup-content p {
+    font-size: 2.3em;
+    font-weight: 700;
+  }
+
+  .popup video {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-right: 50px;  
+  }
+
+  /* CSS untuk memunculkan overlay saat popup aktif */
+  .overlay.active {
+    display: flex;
+  }
+
+  .overlay.active .popup {
+    transform: translateY(0); /* Animasi dari bawah ke atas */
+}
+
 
 /*Bagian Body*/
 .pertama {
@@ -234,51 +289,227 @@ header .signup-btn {
     color: #ccc;
 }
 
-.partners {
-    padding: 50px;
-    background-color: #1d1d1d;
+
+/* Partner Section */
+.partner{
+    background: linear-gradient(to bottom, #585858, #726f6f, rgb(41, 40, 40));
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-bottom: 5%;
+}
+
+.partner h2{    
+    color: #fff;
     text-align: center;
+    font-family: sans-serif;
+    margin-top: -30px;
+    padding-bottom: 25px;
+    margin-right: 5px;
 }
 
-.partners h2 {
-    font-size: 36px;
-    margin-bottom: 30px;
+.partner .logo{
+    display: grid;
+    position: relative;
+    grid-template-columns: repeat(9, 1fr);
+    align-items: center;
+    margin: 20px -80px;
+    gap: 47px;
 }
 
-.partner-logos img {
-    margin: 0 15px;
-    max-height: 100px;
-    width: 100px;   
+.logo img{
+    width: 100px;
+    height: auto;
+}
+
+.partner .logo img.imbalance-logo {
+    width: 100px; /* Mengatur lebar */
+    height: 100px; /*Mengatur tinggi*/
+    object-fit: contain; /* Untuk memastikan gambar tetap proporsional */
+}
+
+.partner .logo img.discovery-logo {
+    width: 200px;
+    height: 200px; /*Mengatur tinggi*/
+    object-fit: contain; /* Untuk memastikan gambar tetap proporsional */
+    z-index: 2;
 }
 
 /*EXPO SECTION*/
-.expo {
-    padding: 50px;
-    background: linear-gradient(to bottom, rgb(63, 62, 62), rgb(43, 42, 42));
-    height: 300px;   
-    text-align: center;
+section{
+    padding: 100px 200px;
 }
 
-.expo h2 {
-    font-size: 36px;
-    margin-top: 40px;
-    margin-bottom: 20px;
+.home {
+    position: relative;
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background: grey;
 }
 
-.expo img {
-    width: 80%;
-    height: auto;
-    margin-bottom: 20px;
+.home:before{
+    z-index: 777;
+    content: '';
+    position: absolute;
+    background: rgba(3, 96, 251, 0.3);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
-.expo-btn {
-    padding: 10px 20px;
-    background-color: #3b82f6;
-    border-radius: 5px;
-    text-decoration: none;
+.home .content {
+    z-index: 888;
     color: white;
+    width: 70%;
+    margin-top: 50px;
+    display: none;
 }
 
+.home .content.active{
+    display: block;
+}
+
+.home .content h1 {
+    font-size: 4em;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 75px;
+    margin-bottom: 40px;
+}
+
+.home .content h1 span{
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.home .content p{
+    margin-bottom: 65px;
+}
+
+.home .content a{
+    background: white;
+    padding: 15px 35px;
+    color: grey;
+    font-size: 1.1em;
+    font-weight: 500;
+    text-decoration: none;
+    border-radius: 2px;
+}
+
+.home .media-icons {
+    z-index: 888;
+    position: absolute;
+    right: 30px;
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s ease;
+}
+
+.home .media-icons a{
+    color: black;
+    font-size: 1.5em;
+    transition: 0.3 ease;
+}
+
+.home .media-icons a:not(:last-child){
+    margin-bottom: 20px;
+}
+
+.home .media-icons a:hover {
+    transform: scale(1.3);
+}
+
+.home video{
+    z-index: 000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider-navigation{
+    z-index: 888;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(80px);
+    margin-bottom: 12px;
+}
+
+.slider-navigation .nav-btn {
+    width: 12px;
+    height: 12px;
+    background: #fff;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(255, 255, 255, 0.5);
+    transition: 0.3 ease;
+}
+
+.slider-navigation .nav-btn.active {
+    background: grey;
+}
+
+.slider-navigation .nav-btn:not(:last-child){
+    margin-right: 20px;
+}
+
+.slider-navigation .nav-btn:hover{
+    transform: scale(1.2);
+}
+
+.video-slide{
+    position: absolute;
+    width: 100%;
+    clip-path: circle(0% at 0 50%);
+}
+
+.home img {
+    left: 0px;
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+}
+
+.video-slide.active{
+    clip-path: circle(150% at 0 50%);
+    transition: 2s ease;
+    transition-property: clip-path;
+}
+
+@media (max-width: 1040px){
+    section {
+        padding: 100px 20px;
+    }
+
+    .home .media-icons {
+        right: 15px;
+    }
+}
+
+.menu-btn{
+    background-size: 30px;
+    background-position: center;
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    transition: 0.3 ease;
+}
+
+.menu-btn.active{
+    z-index: 999;
+    background: url(close.png)no-repeat;
+    background-size: 25px;
+    background-position: center;
+    transition: 0.3 ease;
+}
 
 /*FOOTER SECTION*/
 footer {
