--- a/homepage2.html/homepage2.css
+++ b/homepage2.html/homepage2.css
@@ -1,3 +1,52 @@
+.loader_bg {
+    position: fixed;
+    z-index: 999999;
+    background: linear-gradient(to right, rgb(48, 47, 47), rgb(100, 100, 100));
+    width: 100%;
+    height: 100%;
+}
+
+.loader {
+    border: 0 solid transparent;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: calc(50vh - 75px);
+    left: calc(50vw - 75px);
+}
+
+.loader:before, .loader:after {
+    content: '';
+    border: 1em solid rgb(167, 160, 160);
+    border-radius: 50%;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: loader 2s linear infinite;
+    opacity: 0;
+}
+
+.loader:before{
+    animation-delay: .5s;
+}
+
+@keyframes loader {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
+
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
     margin: 0;
@@ -62,7 +111,7 @@ header nav ul {
     list-style-type: none;
     display: flex;
     gap: 70px;
-    margin-left: 50px;
+    margin-left: 200px;
     margin-top: 10px;
     cursor: pointer;
 }
@@ -75,11 +124,6 @@ header nav ul li a {
     color: #ffffff;
     text-decoration: none;
     font-size: 16px;
-}
-
-header a {
-    position: relative;
-    transition: transform 0.3s ease;
 }
 
 header a:hover {
@@ -114,10 +158,6 @@ header img {
 header .signup-btn {
     color: white
     
-}
-
-header {
-    transition: transform 0.3s ease;
 }
 
 .signup-btn {
